# rust-web-development

./: .env  Cargo.toml  diesel.toml  my_project.sqlite  my_project_test.sqlite
migrations/2024-11-11-082218_create_products/: up.sql
migrations/2024-11-11-094039_create_variants/: up.sql
src/: lib.rs  main.rs  models.rs
